--- a/app/views/dice/index.html.erb
+++ b/app/views/dice/index.html.erb
@@ -1,6 +1,18 @@
+<% 
+die1 = rand(1..6)
+die2= rand(1..6)
+%>
+
+
 <h1> Roll the dice! </h1>
 
 <p>
-3
-4
+<img src="/images/dice/<%= die1%>.svg">
+<img src="/images/dice/<%= die2%>.svg">
+
+</p>
+
+<p>
+<a href="/dice">Roll Again!</a>
+
 </p>
